Absolutely minimal integration of ClojureScript editor.